--- a/css/table.css
+++ b/css/table.css
@@ -47,4 +47,9 @@
         display: flex;
         column-gap: 2rem;
     }
+
+    /*              LOGIN IN            */
+    .nvbr__home {
+        column-gap: 2rem;
+    }
 }
